# shl

./: main.py  pyproject.toml
app/: catalog.py  chat.py  llm.py  main.py  models.py  prompt_manager.py  prompts.py  retrieval.py  routes.py
app/templates/: comparison.jinja2  explanation.jinja2  profile_extraction.jinja2  system.jinja2
