[project]
name = "shl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
]


[tool.fastapi]
entrypoint = "app.main:app"
